--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,10 @@ a {
     flex-basis: 35%;
     text-align: center;
     color: white;
-}
-.text-box>button{
-    background-color: black;
+}.text-box>button{
     margin-top: 10px;
+    background-color: transparent;
+    border: none;
 }
 .text-box>button>a{
     color: pink;
@@ -81,11 +81,9 @@ a {
 }
 .text-box>button>a:hover{
     color: white;
-    text-decoration: underline;
     border: 2px solid white;
-    padding: 5px 10px;
-    font-size: 1.5rem;
     border-radius: 10px;
+    background-color: transparent;
 }
 /* Text-box ends here */
 
@@ -154,3 +152,28 @@ a {
 }
 
 /* Box styling ends */
+
+/* media query for max width:1024px */
+@media screen and (max-width:1024px) {
+    body{
+        overflow-x: hidden;
+    }
+    .container{
+        height: max-content;
+        flex-direction: column;
+        padding: 20px;
+    }
+    .grid-image-box {
+        width: 100%;
+        margin-left: -3%;
+        margin-top: 5%;
+    }
+    .box{
+        height: 200px;
+        width: 100%;
+        grid-row: span 2;
+        grid-column: span 3;
+        padding: 20px;
+    }
+}
+/* media query ends*/
